# self_detection_raw

./: .gitignore  DATA_LOCATION.md  README.md  TRAIN_COMMANDS.md  package.xml  quick_train.py  quick_train_tcn.py  requirements.txt  setup.py  setup_venv.sh  train.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/self_detection_raw/share/self_detection_raw/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/self_detection_raw/share/self_detection_raw/launch/: realtime_infer.launch.py  realtime_infer_delta.launch.py  realtime_infer_v4.launch.py
launch/: realtime_infer.launch.py  realtime_infer_base_corr_explicit.launch.py  realtime_infer_delta.launch.py  realtime_infer_prev_sensor.launch.py  realtime_infer_tcn.launch.py  realtime_infer_v4.launch.py
log/: latest_build
scripts/: README_same_pose_denoised_target.md  crop_dataset_by_index.py  infer_plot.py  infer_plot_v.py  infer_plot_v_base_corr_explicit.py  infer_plot_v_delta.py  infer_plot_v_prev_sensor.py  train_mlp.py  train_mlp_v.py  train_mlp_v_base_corr_explicit.py  train_mlp_v_practical.py  train_mlp_v_prev_sensor.py  train_self_detection_v3.py
scripts/install/: local_setup.sh  setup.ps1  setup.sh
scripts/log/: latest_build
scripts/model/: last_run.json
scripts/worst/: analyze_channel_coupling.py  infer_plot_v_base_corr.py  plot_velocity.py  train_mlp_denoised.py  train_mlp_tcn.py  train_mlp_v_base_corr.py  train_mlp_v_delta.py
self_detection_raw/: __init__.py
self_detection_raw/data/: __init__.py  loader.py  stats.py
(+80 files in other folders)
